namespace ReportGenerationSystem.Models;

/// <summary>
/// Supported output format types for reports.
/// </summary>
public enum FormatType
{
    Html,
    Csv,
    Json
}