namespace ReportGenerationSystem.Models;

/// <summary>
/// Available report types in the system.
/// </summary>
public enum ReportType
{
    Sales,
    Inventory,
    User
}